--- a/scss/main.css
+++ b/scss/main.css
@@ -181,7 +181,7 @@ body {
 
 /* line 173, main.scss */
 .main-window {
-  background: url(../img/baner.jpg) no-repeat center;
+  background: url(../img/baner1.jpg) no-repeat center;
   background-size: cover; }
   /* line 177, main.scss */
   .main-window__row {
