--- a/scss/main.css
+++ b/scss/main.css
@@ -782,7 +782,7 @@ body {
   background: #1f2e45;
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
+  display: none;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
