--- a/scss/main.scss
+++ b/scss/main.scss
@@ -715,7 +715,7 @@ body {
 	bottom: 0;
 	z-index: 100;
 	background: #1f2e45;
-	display: flex;
+	display: none;
 	align-items: center;
 	justify-content: center;
 
