--- a/Flowers/mobile/scss/mobile-basket.css
+++ b/Flowers/mobile/scss/mobile-basket.css
@@ -17,7 +17,8 @@
   width: 100%;
   max-width: 768px;
   margin: 0 auto;
-  padding: 0 5px; }
+  padding: 0 5px;
+  overflow: hidden; }
 
 /* line 37, mobile-basket.scss */
 img {
