--- a/Flowers/mobile/scss/mobile-product.css
+++ b/Flowers/mobile/scss/mobile-product.css
@@ -383,6 +383,8 @@ li {
 
 /* line 343, mobile-product.scss */
 .information-block {
+  width: 95%;
+  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -503,7 +505,7 @@ li {
   /* line 461, mobile-product.scss */
   .information-block textarea {
     resize: none;
-    width: 75%;
+    width: 100%;
     height: 150px;
     padding: 10px;
     border: 1px solid #383838;
@@ -535,7 +537,7 @@ li {
 /* line 489, mobile-product.scss */
 .form-group {
   border-radius: 0;
-  width: 95%;
+  width: 100%;
   position: relative;
   border: 1px solid #383838;
   margin-bottom: 32px; }
