--- a/qwe/style/media.css
+++ b/qwe/style/media.css
@@ -34,7 +34,8 @@
       display: block;
       width: 100%;
       height: 2px;
-      background: #000; }
+      background: #000;
+  margin-left: 5px;}
 
   /* line 31, media.scss */
   .main-menu {
